# mmai-hackathon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.codescene/: code-health-rules.json
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  pre-commit.yml  test.yml
docs/: echo.md  molecule.md  omics.md  tabular.md
mmai25_hackathon/: dataset.py  utils.py
mmai25_hackathon/docs/: cxr.md  ecg.md  echo.md  molecule.md  omics.md  protein.md  supervised-labels.md  text.md
mmai25_hackathon/io/: CXR.py  ECG.py  cxr.py  ecg.py  echo.py  labels.py  molecule.py  protein.py  supervised_labels.py  tabular.py  text.py
mmai25_hackathon/load_data/: CXR.py  cxr.py  ecg.py  echo.py  ehr.py  labels.py  molecule.py  omics.py  protein.py  supervised_labels.py  tabular.py  text.py
mmai25_hackathon/prep/: omics.py
mmai25_hackathon/prepdata/: chem_transform.py  protein_transform.py
tests/: dropbox_download.py  test_dataset.py
tests/load_data/: test_cxr.py  test_ecg.py  test_echo.py  test_ehr.py  test_labels.py  test_molecule.py  test_protein.py  test_supervised_labels.py  test_tabular.py  test_text.py
