[project]
name = "mmai-hackathon"
version = "0.1.0"
description = "Base source code for MMAI workshop Hackathon."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pykale[full]@git+https://github.com/pykale/pykale@main",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "torch-geometric>=2.6.0",
]
authors = [
    { name = "Shuo Zhou", email = "shuo.zhou@sheffield.ac.uk" },
    { name = "Xianyuan Liu", email = "xianyuan.liu@sheffield.ac.uk" },
    { name = "Wenrui Fan", email = "wenrui.fan@sheffield.ac.uk" },
    { name = "Mohammod N. I. Suvon", email = "m.suvon@sheffield.ac.uk" },
    { name = "L. M. Riza Rizky", email = "l.m.rizky@sheffield.ac.uk" },
]

[tool.isort]
known_first_party = [
    "mmai25_hackathon",
    "tests",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.mypy]
disable_error_code = ["assignment", "call-overload", "attr-defined"]

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv.sources]
pykale = { git = "https://github.com/pykale/pykale", rev = "main" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
